--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             target="_blank"
             onclick="myFunction()"
             class="video"
-            href="https://cdn.glitch.global/c4446aae-daa1-42cd-bf30-ea52788b9ae1/51065806-ae8a-4616-a752-0989fcbcd25c.WhatsApp%20Video%202024-06-26%20at%2022.44.29_69eadfd9.mp4?v=171942398614"
+            href="https://cdn.glitch.global/cfdab748-b145-4b28-8f85-c26ac388a3c9/cookies.mp4?v=1719846896202"
             ><img
               src="https://cdn.glitch.global/0bc5d4f9-c6e3-43c1-941c-b027cb2387a7/download.jfif?v=1695503392834"
               alt=""
